syntax = "proto3";

package store;

service StoreService {
    rpc RemoveFile (RemoveFileDTO) returns (RemoveFileRes);
}

message RemoveFileDTO {
    string id = 1;
}

message RemoveFileRes {}
